# Memo

./: .gitignore  CMakeLists.txt
backend/: CMakeLists.txt  backend.h
backend/DataCards/include/: Note.h  Reminder.h  Repeater.h  iDataCard.h
backend/DataCards/src/: Note.cpp  Reminder.cpp  Repeater.cpp  iDataCard.cpp
backend/Database/: dbconnect.cpp  dbconnect.h  queries.h
backend/tests/: TestsDatabase.cpp
